--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,11 @@ dist-ssr
 *.sw?
 .env
 .env.*
+*.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+.env.development
+.env.production
+.env.test
