--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "generate-images": "node scripts/generate-responsive-images.js"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.12.2",
     "@tailwindcss/vite": "^4.1.7",
     "aos": "^2.3.4",
     "bcryptjs": "^3.0.2",
@@ -19,6 +20,7 @@
     "express": "^5.1.0",
     "framer-motion": "^12.12.2",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "mongoose": "^8.15.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -35,8 +37,11 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "rollup-plugin-visualizer": "^6.0.3",
     "sharp": "^0.33.5",
+    "terser": "^5.43.1",
     "typescript": "^5.4.2",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "vite-plugin-compression2": "^2.2.0"
   }
 }
