--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "build": "npm install"
+    "build": "echo 'No build step required for Node.js backend'"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
