--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -13,4 +13,5 @@ services:
       - key: JWT_SECRET
         sync: false
       - key: PORT
-        value: 5000 
+        value: 5000
+    healthCheckPath: /api/health 
